IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_type5.src
.IPPcode19
READ GF@tauh nil
